# job-hunt-agent

./: .gitignore  CLAUDE.md  CODE_REVIEW_RAPPORT_EXECUTIF.md  EXAMPLE_TESTS.md  Procfile.dev  RAILS_CODE_QUALITY_ANALYSIS.md  RAILS_QUICK_REFERENCE.txt  README.md  TEST_ANALYSIS_SUMMARY.md  TEST_COVERAGE_ANALYSIS.md  TEST_PRIORITIES.md
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json
.github/: copilot-instructions.md
docs/: PYTHON_CODE_QUALITY_ANALYSIS.md  architecture rails.md  architecture repo.md  backlog.md  specs fonctionnelles.md
python_services/: main.py
python_services/agent_api/: __init__.py  main.py  schemas.py
python_services/agent_api/core/: __init__.py  offer_analysis.py
python_services/agent_api/routers/: __init__.py  offer_analysis.py
python_services/api/: pyproject.toml  requirements-dev.txt  requirements.txt
python_services/scraper_api/: __init__.py  main.py  schemas.py
python_services/scraper_api/core/: browser.py  exceptions.py
python_services/scraper_api/parsers/: __init__.py  base.py  linkedin.py  wttj.py
rails_app/: Dockerfile  Gemfile
rails_app/.devcontainer/: Dockerfile
rails_app/app/controllers/: application_controller.rb  cvs_controller.rb  gmail_connections_controller.rb  home_controller.rb  job_offers_controller.rb  profiles_controller.rb
rails_app/app/jobs/: cv_analysis_job.rb  offer_analysis_job.rb
rails_app/app/models/: cv.rb  job_offer.rb  (+2 more)
rails_app/config/: ci.rb  credentials.yml.enc  deploy.yml  master.key  routes.rb
rails_app/db/: schema.rb
rails_app/spec/: rails_helper.rb  spec_helper.rb
(+1460 files in other folders)
